--- a/src/components/ResultCep/ResultCep.css
+++ b/src/components/ResultCep/ResultCep.css
@@ -9,10 +9,19 @@
     padding: 1.5rem;
 }
 
+.text_result{
+    font-size: 1.8rem;
+    margin: 1.5rem 0;
+    color: #fff;
+}
+
+
 .title_result{
     font-size: 2.6rem;
     margin: 1.5rem 0;
 }
+
+
 
 .container_result span{
     font-size: 1.4rem;
