--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -6,6 +6,7 @@
     border: 3px solid #ddd8d8;
     border-top: 3px solid transparent;
     animation: loading 2s linear infinite;
+    margin: 2rem 0;
 }
 
 @keyframes loading{
